--- a/HandMadeShop.Data/HandMadeShop.Data.csproj
+++ b/HandMadeShop.Data/HandMadeShop.Data.csproj
@@ -49,6 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HandMadeShopDbContext.cs" />
+    <Compile Include="Infrastructure\DbFactory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,6 +68,13 @@
       <Project>{a5cdb0c3-c6cb-4f57-835b-20b6800e3c7d}</Project>
       <Name>HandMadeShop.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HandMadeShop.Model\HandMadeShop.Model.csproj">
+      <Project>{8e4d07db-e930-4e2b-bea0-45dfe5bcddbe}</Project>
+      <Name>HandMadeShop.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
