--- a/HandMadeShop.Data/HandMadeShop.Data.csproj
+++ b/HandMadeShop.Data/HandMadeShop.Data.csproj
@@ -57,9 +57,9 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\201606060345217_InitialDB.cs" />
-    <Compile Include="Migrations\201606060345217_InitialDB.Designer.cs">
-      <DependentUpon>201606060345217_InitialDB.cs</DependentUpon>
+    <Compile Include="Migrations\201606071003189_InitialDB.cs" />
+    <Compile Include="Migrations\201606071003189_InitialDB.Designer.cs">
+      <DependentUpon>201606071003189_InitialDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,7 +81,9 @@
     <Compile Include="Repositories\VisitorStatisticRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -95,8 +97,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201606060345217_InitialDB.resx">
-      <DependentUpon>201606060345217_InitialDB.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201606071003189_InitialDB.resx">
+      <DependentUpon>201606071003189_InitialDB.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
